--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,3 +4,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # Otherwise forward it to index.php
 RewriteRule . index.php
+
+ErrorDocument 404 http://mymagaz.local/404.php
